--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   </head>
   <body>
     <h1>This is a guide on how to program a game.</h1>
+    <h1>Credit to SmartyNotchy.</h1>
     <p>Or rather, a guide on how to NOT program a game! You see, there are a lot of tutorials out there teaching you how to program games that users will find interesting, but a relatively few amount of tutorials that tell you the things you shouldn't do when programming a game. So, naturally, instead of making a really great game showing all the things you SHOULD do when making a game (because that would take too much effort 😅), this game shows you all the things you SHOULDN'T do when making a game!</p>
     <hr>
+    
     <p>In this game, you'll play as Bob, a worker at [insert company here]. The goal of the game is to guide Bob through his workday without messing up. However, the programmer who made this game (a.k.a me) wasn't feeling his best, and he made a lot of mistakes along the way. And when I say a lot, I mean a LOT. Let's see how this quaint little game can turn into a gaming nightmare when you make ALL of the wrong turns.</p>
     <button onclick="window.location.href='/stage1-1.html'">Start Game</button>
   </body>
