--- a/stage2-2.html
+++ b/stage2-2.html
@@ -11,14 +11,20 @@
     <p>After forcibly waking up Bob myself, we continue to the next stage of our game. Bob wants to listen to something while he makes his breakfast, though... why don't we turn on the radio?</p>
     <button onclick="radio()">Turn On Radio</button>
     <p id="levelEndText" hidden>Gah! Rick rolls! Why?</p>
-    <h2 id="moral" hidden>The Moral: Self-explanatory.</h2>
+    <h2 id="moral" hidden>The Moral: There was none, we just wanted to rickroll you.</h2>
     <button id="next" hidden onclick="window.location.href='/stage2-3.html'">Next</button>
   
     <script>
       var rickRoll = new Audio("rickRoll.mp3");
-
+      var triggered;
       function radio() {
         rickRoll.play();
+        if (!triggered) {
+          setTimeout(unhide, 20000);
+        }
+        var triggered = 1;
+      }
+      function unhide() {
         document.getElementById("levelEndText").hidden = false;
         document.getElementById("moral").hidden = false;
         document.getElementById("next").hidden = false;
