--- a/stage3-2.html
+++ b/stage3-2.html
@@ -11,7 +11,7 @@
     <p>After Bob's boss calms down, Bob continues to his work station. Let's help Bob log onto his computer.</p>
     <p>In this level, you'll have to solve an extremely complicated puzzle to find the password. Then, you'll enter it in the text box and press "Log In" to test it. By the way, the password is <em>totally</em> not "password". <em>TOTALLY.</em></p>
 
-    <textarea id="password">Delete this text and enter the password you find.</textarea>
+    <textarea id="password" autofocus placeholder="Enter the password you find here."></textarea>
     <br>
     <p>Solve this system of equations for x. The password is the numerical value of x.</p>
     <p>x + 2y - z = 12</p>
