--- a/stage2-2.html
+++ b/stage2-2.html
@@ -11,7 +11,7 @@
     <p>After forcibly waking up Bob myself, we continue to the next stage of our game. Bob wants to listen to something while he makes his breakfast, though... why don't we turn on the radio?</p>
     <button onclick="radio()">Turn On Radio</button>
     <p id="levelEndText" hidden>Gah! Rick rolls! Why?</p>
-    <p id="levelEndText1" hidden>You fumble to turn the radio off, but it's not working. Maybe it'll end on it's own in 20 seconds.</p>
+    <p id="levelEndText1" hidden>You fumble to turn the radio off, but it's not working. Maybe it'll end on its own in 20 seconds.</p>
     <h2 id="moral" hidden>The Moral: There was none, we just wanted to rickroll you.</h2>
     <button id="next" hidden onclick="window.location.href='/stage2-3.html'">Next</button>
   
