--- a/stage3-3.html
+++ b/stage3-3.html
@@ -18,7 +18,7 @@
 
     <script>
       function submit() {
-        if (document.getElementById("textareabox").value == "Type a report for Bob here." || document.getElementById("textareabox").value = "") {
+        if (document.getElementById("textareabox").value == "Type a report for Bob here." || document.getElementById("textareabox").value == "") {
           document.getElementById("alttext").hidden = false;
         } else {
           document.getElementById("levelEndText").hidden = false;
