--- a/stage4-2.html
+++ b/stage4-2.html
@@ -19,7 +19,7 @@
         strad.play();
         document.getElementById("musicText").hidden = false;
         setTimeout(function () {
-          window.location.href="https://how-to-not-make-a-game.williampark2.repl.co/stage4-2b.html"
+          document.querySelector('html').innerHTML = "\r\n<html>\r\n  <head>\r\n    <meta charset=\"utf-8\">\r\n    <meta name=\"viewport\" content=\"width=device-width\">\r\n    <title>Work Simulator<\/title>\r\n    <link href=\"style.css\" rel=\"stylesheet\" type=\"text\/css\" \/>\r\n  <\/head>\r\n  <body>\r\n    <h1>ERROR<\/h1>\r\n    <p>THIS WEBSITE INFRINGES THE MOJANG UELA (USER END LICENSE AGREEMENT) AND TERMS OF SERVICE. PLEASE ENJOY LISTENING TO RICK ASTLEY\'S \"NEVER GONNA GIVE YOU UP\" INSTEAD.<\/p>\r\n    <h2>The Moral: Please consider copyright licenses before including images\/audio in your programs.<\/h2>\r\n    <button onclick=\"window.location.href=\'\/stage4-3.html\'\">Next<\/button>\r\n\r\n    <script>\r\n      var music = new Audio(\"rickRoll.mp3\");\r\n      music.play();\r\n    <\/script>\r\n  \r\n  <\/body>\r\n<\/html>"
         }, 10000);
       }
     </script>
