--- a/stage4-3.html
+++ b/stage4-3.html
@@ -10,7 +10,7 @@
     <h1>Level 4-3</h1>
     <p>Congratulations - you managed to get Bob through... lunch. We're just halfway done?!?!?! oh..... ☹</p>
     <p>Just one thing - help Bob throw away his lunch. Unfortunately, since his boss is an evil maniac, he made the trash can's lid... password locked. Help Bob decode the password!</p>
-    <textarea id="text">Enter password here.</textarea>
+    <textarea id="text" placeholder = "Enter password here." autofocus></textarea>
     <p>Password: 4 9 4 25 15 21 21 19 5 1 14 15 14 12 9 14 5 18 5 19 15 21 18 3 5 20 15 4 5 3 15 4 5 20 8 9 19 15 8 23 5 12 12</p>
     <button onclick="password()">Submit Password</button>
     <p>Oh yeah, by the way, the password is totally not "password"... *cough cough*</p>
