--- a/stage5-2.html
+++ b/stage5-2.html
@@ -10,7 +10,7 @@
     <h1>Level 5-2</h1>
     <p>Bob needs to login to his computer again. Unfortunately, Bobba, Bob's arch-nemesis, has guessed his password and changed it. Luckily, Bobba left a puzzle for Bob to figure out! Solve the puzzle to help Bob sign in again.</p>
     <p>What has four legs at morning, two legs at noon, and three legs at evening?</p>
-    <textarea id="password">Enter the answer here.</textarea>
+    <textarea id="password" autofocus placeholder="Enter the answer here."></textarea>
     <button onclick="login()" id="login">Log In</button>
     <p id="levelEndText" hidden>Oh, come on! Almost everyone knows that riddle!</p>
     <h2 id="moral" hidden>The Moral: Don't use cliched puzzles/riddles.</h2>
