--- a/stage6-2.html
+++ b/stage6-2.html
@@ -13,7 +13,7 @@
     <br>
     <p id="tvText1" hidden>Loading Programs...</p>
     <p id="tvText2" hidden>Now, here's a message from our sponsors!</p>
-    <video width="640" height="480" id="tv" controls hidden>
+    <video width="640" height="480" id="tv" hidden autoplay>
       <source src="grammarly.mp4" type=video/ogg>
     </video>
     <p id="levelEndText1" hidden>AAAAHH!!! I HATE GRAMMARLY ADS!!!!</p>
