--- a/stage6-2.html
+++ b/stage6-2.html
@@ -23,6 +23,8 @@
 
     <script>
       function tv() {
+        let x = document.getElementById("tv");
+        x.play();
         document.getElementById("tv").hidden = false;
         document.getElementById("tvText1").hidden = false;
         document.getElementById("tvText2").hidden = false;
