--- a/end.html
+++ b/end.html
@@ -11,6 +11,6 @@
     <p>You've successfully guided Bob through his workday! If you didn't enjoy this game and thought it was the worst and most irritating game in the world, thank you! That was the whole point of this game! Again, thank you for playing, and please check out some of my other projects!</p>
     <p>-SmartyNotchy</p>
     <button onclick="window.location.href='/stage1-1.html'">Play Again</button>
-    <button onclick="window.location.href='/appendixA.html'">Appendix A: Dreamland (Unfinished)</button>
+    <button onclick="window.location.href='/appendixA.html'">Appendix A: Dreamland (Broken and Unfinished)</button>
   </body>
 </html>
