--- a/end.html
+++ b/end.html
@@ -10,6 +10,7 @@
     <h1>Congratulations!</h1>
     <p>You've successfully guided Bob through his workday! If you didn't enjoy this game and thought it was the worst and most irritating game in the world, thank you! That was the whole point of this game! Again, thank you for playing, and please check out some of my other projects!</p>
     <p>-SmartyNotchy</p>
+    <p>Thanks to RCMSProgrammers for refurbishing content.</p>
     <button onclick="window.location.href='/stage1-1.html'">Play Again</button>
     <button onclick="window.location.href='/appendixA.html'">Appendix A: Dreamland (Broken and Unfinished)</button>
   </body>
