--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <h1>This is a guide on how to program a game.</h1>
     <h1>Credit to SmartyNotchy.</h1>
+    <p>Thanks to RCMSProgrammers for refurbishing content.</p>
     <p>Or rather, a guide on how to NOT program a game! You see, there are a lot of tutorials out there teaching you how to program games that users will find interesting, but a relatively few amount of tutorials that tell you the things you shouldn't do when programming a game. So, naturally, instead of making a really great game showing all the things you SHOULD do when making a game (because that would take too much effort 😅), this game shows you all the things you SHOULDN'T do when making a game!</p>
     <hr>
     
