--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <h1>This is a guide on how to program a game.</h1>
     <h1>Credit to SmartyNotchy.</h1>
     <p>Thanks to RCMSProgrammers for refurbishing content.</p>
+    <p>We are affiliated with the MCPS/RCMS Video Game<br>Spreadsheet, found at <a href='https://kutt.it/mcps'>kutt.it/mcps</a>, <a href='https://kutt.it/rcms'>kutt.it/rcms</a> or <a href='https://docs.google.com/spreadsheets/u/1/d/1V8ZxFze9awVOQS98YN7gV3Y4TwIlRi8O6Wte04Ao2O8'>here</a>.<br>There are many fun games on there that we spend time unblocking, including Cookie Clicker,<br>Super Mario 64, Slope, Tunnel Rush, and so much more.</p>
+    <h1>This is a guide on how to program a game.</h1>
     <p>Or rather, a guide on how to NOT program a game! You see, there are a lot of tutorials out there teaching you how to program games that users will find interesting, but a relatively few amount of tutorials that tell you the things you shouldn't do when programming a game. So, naturally, instead of making a really great game showing all the things you SHOULD do when making a game (because that would take too much effort 😅), this game shows you all the things you SHOULDN'T do when making a game!</p>
     <hr>
     
